--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="gTool is a Web Searching tool that uses GitHub API to index user info based on their profile name and other parametres " />
+ <meta property="og:title" content="gTool - GitHub Profile Search Tool" />
+<meta property="og:description" content="Search and discover GitHub profiles with ease. Find profile information, repositories, and more with our convenient search tool." />
+<meta property="og:image" content="https://raw.githubusercontent.com/akash2v/gTool/refs/heads/main/public/gtool.jpg" />
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
